--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "node": "0.10.31",
     "npm": ">=1.4"
   },
-  "repository": "https://github.com/mongolab/hello-mongoose.git",
+  "repository": "https://github.com/nuneju/mean-app.git",
   "authors": [
-    "Ben Wen",
-    "Chris Chang"
+    "Juan Nunez"
   ],
   "license": "MIT",
   "dependencies": {
@@ -26,8 +25,6 @@
     "passport": ">= 0.0.0",
     "passport-local": ">= 0.0.0",
     "body-parser": "^1.9.2",
-    "cookie-parser": "^1.3.3",
-    "express-session": "^1.9.1",
     "method-override": "^2.3.0",
     "morgan": "^1.4.1"
   },
@@ -46,6 +43,9 @@
     "body-parser": "^1.9.2",
     "cookie-parser": "^1.3.3",
     "express-session": "^1.9.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-watch": "^0.6.1",
     "method-override": "^2.3.0",
     "morgan": "^1.4.1"
   }
