--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "express-session": "^1.9.1",
     "grunt": "^0.4.5",
     "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "method-override": "^2.3.0",
-    "morgan": "^1.4.1"
+    "morgan": "^1.4.1",
+    "node-bourbon": "^1.2.3"
   }
 }
